--- a/WebsiteCSS.css
+++ b/WebsiteCSS.css
@@ -37,5 +37,56 @@
 }
 
 .ClickBlur.grown {
-    transform: scale(100);
+    transform: scale(200);
+}
+
+
+.MindPalaceContainer {
+    position: relative;
+    width: 320px;
+    height: 180px;
+    transition: scale 1s ease;
+}
+
+.MindPalaceImage {
+    margin: 50px;
+    width: 320px;
+    height: 180px;
+    position: absolute;
+    user-select: none;
+}
+
+.MindPalaceLensFlare{
+    width: 300px;
+    height: 100px;
+    position: absolute;
+    opacity: 0;
+    filter: brightness(0.9);
+    transition: opacity 1s ease;
+    pointer-events: none;
+    user-select: none;
+}
+
+.MindPalaceLensFlareLeft{
+    padding-left: 30px;
+    padding-top: 55px;
+}
+
+.MindPalaceLensFlareRight{
+    padding-left: 90px;
+    padding-top: 50px;
+}
+
+.MindPalaceText{
+    width: 320px;
+    margin-left: 71px;
+    margin-top: 150px;
+    position: absolute;
+    font-size: 30px;
+    font-family:'Franklin Gothic Medium';
+    background-image: linear-gradient(to right, white, gray);
+    background-clip: text;
+    color: transparent;
+    pointer-events: none;
+    transition: transform 1s ease;
 }
