Made clicking easier
Removed dragging and highlighting of the yaps which were getting in the way

--- a/yap.css
+++ b/yap.css
@@ -8,4 +8,6 @@
 
 .gif {
     position: absolute;
+    -webkit-user-drag: none;    /*Stop it from being dragable*/
+    user-select: none;          /*Stop it from being hightlightable*/
 }
