Small code and comment changes

--- a/index.css
+++ b/index.css
@@ -2,7 +2,12 @@
 .Body {
     background-color:rgb(70, 80, 90);
     overflow: hidden;
+    margin: 0px;
 }
+
+/*************************************************************************************************/
+/*                                         MOUSE EFFECTS                                         */
+/*************************************************************************************************/
 
 #MouseBlurContainer {
     position: absolute;
@@ -40,9 +45,9 @@
     transform: scale(200);
 }
 
-
-/**************************************************************************************************/
-/**************************************************************************************************/
+/*************************************************************************************************/
+/*                                            BUTTONS                                            */
+/*************************************************************************************************/
 
 .Buttons {
     display: flex;
@@ -78,6 +83,10 @@
     transition: transform 1s ease;
 }
 
+/*********************************/
+/*          MIND PALACE          */
+/*********************************/
+
 .MindPalaceLensFlare{
     width: 300px;
     height: 100px;
@@ -104,8 +113,12 @@
     background-image: linear-gradient(to right, white, gray);
 }
 
+/*********************************/
+/*          YAP SESSION          */
+/*********************************/
+
 .YapSessionText {
     left: 40px;
     background-image: linear-gradient(to right, purple, red); 
-    transition: transform 100s ease-out;
+    transition: transform 100s;
 }
