Shuffles the brainrot videos
And some other stuff maybe I'm not sure

--- a/index.css
+++ b/index.css
@@ -76,7 +76,7 @@
     bottom: 50px;
     margin: auto;
     font-size: 30px;
-    font-family:'Franklin Gothic Medium';
+    font-family: "Franklin Gothic Medium";
     background-clip: text;
     color: transparent;
     pointer-events: none;
