Changed classes to ids and added robottest button
Changed all the classes that were being used once to ids and added a button to go to the robot test game

--- a/brainrot.css
+++ b/brainrot.css
@@ -1,12 +1,12 @@
 
-.Body {
+#Body {
     background-color:rgb(70, 80, 90);
     margin: 0px;
     overflow: hidden;
     pointer-events: none;
 }
 
-.VideoGrid {
+#VideoGrid {
     display: grid;
     position: absolute;
     height: 100%;
