Added Finite Craft (no button  yet)
Added a game where you combine resources to create new ones (THIS IS NO A BLATANT (worse) COPY NOT https://neal.fun/infinite-craft/)
Please add more stuff for me by making a pull request

--- a/index.css
+++ b/index.css
@@ -136,6 +136,20 @@
 }
 
 #MatrixRainText {
-    left: 50px;
+    left: 53px;
     background-image: linear-gradient(to bottom, blue, pink); 
+}
+
+/**********************************/
+/*          FINITE CRAFT          */  
+/**********************************/
+
+#FiniteCraft {
+    display: block;
+    background-color: #0F0F0F;
+}
+
+#FiniteCraftText {
+    left: 53px;
+    background-image: linear-gradient(to top, gray, black); 
 }
